css/index.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-family: fantasy;
}

body {
    font-family: Arial, sans-serif;
    background: #f8f8f8;
    padding-top: 60px;
    align-items: center;
    display: flex;
    justify-content: center;
}

.italic {
    font-style: italic;
    top: 50%;
    text-align: center;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    font-size: 2rem;
}

.menu ul li {
    margin-top: 1rem;
    height: min(100vh, 100%);
}


.website-wrapper {
    flex-wrap: wrap;
}

.main-container {
    width: min(80vw, 1920px);
    height: auto;
    background: white;
    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
    border-radius: 8px;
    display: flex;
    flex-direction: column;
    margin: 0 auto;
    overflow-y: scroll;
    overflow-x: hidden;
    padding: 2rem;
}

.content-divider-section {
    width: min(80vw, 100%);
    height: 0.1vh;
    background-color: #726c6c;
    margin: 2rem 0;
}

html {
    font-size: 62.5%;
}




@media (max-width: 920px) {
    .main-container {
        width: 90vw;
    }
}

@media (max-width: 480px) {
    .main-container {
        width: 95vw;
    }
}

@media (max-width: 320px) {
    .main-container {
        width: 98vw;
    }
}

